fixed spacing

--- a/public/CSS/homepage/block.css
+++ b/public/CSS/homepage/block.css
@@ -23,6 +23,7 @@
     align-items: center;
     gap: 1rem;
     text-align: center;
+    padding-top: 1rem;
     color: #fff;
 }
 
